[workspace]
members = [
  "pulse-common",
  "pulse-metrics",
  "pulse-promcli",
  "pulse-promloadgen",
  "pulse-protobuf",
  "pulse-proxy",
  "pulse-vrl-tester",
]
resolver = "2"

[workspace.dependencies]
ahash                  = "0.8"
anyhow                 = "1"
assert_matches         = "1.5.0"
async-trait            = "0.1"
aws-config             = "1.5.10"
aws-credential-types   = "1.2.1"
aws-sdk-sqs            = "1.49.0"
aws-sigv4              = "1.2.5"
aws-smithy-async       = "1.2.1"
aws-smithy-http        = "0.60.11"
aws-smithy-runtime-api = { version = "1.7.3", features = ["test-util"] }
aws-smithy-types       = "1.2.9"
axum                   = "0.7.9"
backoff                = { version = "0.4.0", features = ["tokio"] }
base64ct               = "1.6.0"
bd-grpc                = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-log                 = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-panic               = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-pgv                 = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-proto               = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-proto-util          = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-runtime             = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-runtime-config      = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-server-stats        = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-shutdown            = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-test-helpers        = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-time                = { git = "https://github.com/bitdriftlabs/shared-core.git" }
built                  = { version = "0.7", features = ["git2"] }
bytes                  = "1"
cc                     = "1.2.2"
clap                   = { version = "4.5.21", features = ["derive", "env"] }
comfy-table            = "7.1.3"
console-subscriber     = "0.4.1"
criterion              = { version = "0.5", features = ["html_reports"] }
ctor                   = "0.2.9"
cuckoofilter           = "0.5.0"
dashmap                = { version = "6", features = ["raw-api"] }
deadpool               = { version = "0.12", features = ["managed", "rt_tokio_1"] }
event-listener         = "5.3.1"
fst                    = "0.4.7"
futures                = "0.3"
futures-util           = "0.3.31"
gettid                 = "0.1.3"
hashbrown              = "0.15.2"
http                   = "1.1.0"
http-body-util         = "0.1.2"
humantime-serde        = "1.1"
hyper                  = "1.5.1"

hyper-rustls = { version = "0.27.3", default-features = false, features = [
  "http1",
  "http2",
  "webpki-tokio",
  "aws-lc-rs",
] }

hyper-util            = { version = "0.1.10", features = ["client", "client-legacy"] }
hyperloglogplus       = "0.4.1"
intrusive-collections = "0.9.7"
itertools             = "0.13.0"
k8s-openapi           = { version = "0.23.0", features = ["v1_26"] }

kube = { version = "0.97.0", features = [
  "runtime",
  "derive",
  "rustls-tls",
  "client",
], default-features = false }

log               = "0.4"
matches           = "0.1"
memchr            = "2"
mockall           = "0.13.1"
nom               = "7"
notify            = "7.0.0"
parking_lot       = "0.12"
pretty_assertions = "1.4.1"
prometheus        = { version = "0.13", features = ["process"] }
prometheus-parser = { git = "https://github.com/bitdriftlabs/mpl-core" }

protobuf = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack", features = [
  "bytes",
  "with-bytes",
] }
protobuf-codegen = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack" }
protobuf-json-mapping = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack" }

quickcheck                 = "1"
quickcheck_macros          = "1"
rand                       = { version = "0.8", features = ["small_rng"] }
rand_xoshiro               = "0.6"
regex                      = "1"
reqwest                    = { version = "0.12.9", default-features = false, features = ["rustls-tls-webpki-roots"] }
reusable-fmt               = "0.2.0"
rustls                     = "0.23.19"
serde                      = { version = "1", features = ["derive"] }
serde_json                 = "1"
serde_yaml                 = "0.9.34"
snap                       = "1"
socket2                    = "0.5.8"
tempfile                   = "3.14"
thiserror                  = "2"
tikv-jemalloc-ctl          = "0.6.0"
tikv-jemallocator.features = ["profiling", "stats", "unprefixed_malloc_on_supported_platforms"]
tikv-jemallocator.version  = "0.6.0"
time                       = { version = "0.3.36", features = ["formatting"] }
tokio                      = { version = "1", features = ["full", "parking_lot", "tracing", "test-util"] }
tokio-stream               = "0.1.16"
tokio-test                 = "0.4"
topk                       = "0.5.0"
topological-sort           = "0.2.2"
tracing                    = "0.1.41"
unwrap-infallible          = "0.1.5"
url                        = "2.5.4"
uuid                       = { version = "1.11.0", features = ["v4"] }

vrl = { git = "https://github.com/mattklein123/vrl.git", branch = "performance-20240826", default-features = false, features = [
  "compiler",
  "value",
  "diagnostic",
  "path",
  "parser",
  "stdlib",
  "core",
] }

xxhash-rust = { version = "0.8.12", features = ["xxh3", "xxh64"] }
