[workspace]
members = [
  "pulse-common",
  "pulse-drop-tester",
  "pulse-metrics",
  "pulse-promcli",
  "pulse-promloadgen",
  "pulse-protobuf",
  "pulse-proxy",
  "pulse-vrl-tester",
]
resolver = "2"

[workspace.dependencies]
ahash                  = "0.8"
anyhow                 = "1"
assert_matches         = "1.5.0"
async-trait            = "0.1"
aws-config             = "1.8.6"
aws-credential-types   = "1.2.6"
aws-sdk-sqs            = "1.83.0"
aws-sigv4              = "1.3.4"
aws-smithy-async       = "1.2.5"
aws-smithy-http        = "0.62.3"
aws-smithy-runtime-api = { version = "1.9.0", features = ["test-util"] }
aws-smithy-types       = "1.3.2"
axum                   = "0.8.4"
backoff                = { version = "0.4.0", features = ["tokio"] }
base64ct               = "1.8.0"
bd-grpc                = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-grpc-codec          = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-log                 = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-panic               = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-pgv                 = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-proto               = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-proto-util          = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-runtime             = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-runtime-config      = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-server-stats        = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-shutdown            = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-test-helpers        = { git = "https://github.com/bitdriftlabs/shared-core.git" }
bd-time                = { git = "https://github.com/bitdriftlabs/shared-core.git" }
built                  = { version = "0.8", features = ["git2"] }
bytes                  = "1"
cc                     = "1.2.37"
clap                   = { version = "4.5.47", features = ["derive", "env"] }
comfy-table            = "7.2.1"
console-subscriber     = "0.4.1"
criterion              = { version = "0.7", features = ["html_reports"] }
ctor                   = "0.5.0"
cuckoofilter           = "0.5.0"
dashmap                = { version = "6", features = ["raw-api"] }
deadpool               = { version = "0.12", features = ["managed", "rt_tokio_1"] }
event-listener         = "5.4.1"
fst                    = "0.4.7"
futures                = "0.3"
futures-util           = "0.3.31"
gettid                 = "0.1.4"
hashbrown              = "0.16.0"
http                   = "1.3.1"
http-body-util         = "0.1.3"
humantime-serde        = "1.1"
hyper                  = "1.7.0"

hyper-rustls = { version = "0.27.7", default-features = false, features = [
  "http1",
  "http2",
  "webpki-tokio",
  "aws-lc-rs",
] }

hyper-util            = { version = "0.1.16", features = ["client", "client-legacy"] }
hyperloglogplus       = "0.4.1"
intrusive-collections = "0.9.7"
itertools             = "0.14.0"
k8s-openapi           = { version = "0.26.0", features = ["v1_30"] }

kube = { version = "2.0.0", features = [
  "runtime",
  "derive",
  "rustls-tls",
  "client",
], default-features = false }

log               = "0.4"
matches           = "0.1"
memchr            = "2"
mockall           = "0.13.1"
nom               = "8"
notify            = "8.2.0"
parking_lot       = "0.12"
pretty_assertions = "1.4.1"
prometheus        = { version = "0.14", features = ["process"] }
prometheus-parser = { git = "https://github.com/bitdriftlabs/mpl-core" }

protobuf = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack", features = [
  "bytes",
  "with-bytes",
] }
protobuf-codegen = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack" }
protobuf-json-mapping = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack" }

quickcheck        = "1"
quickcheck_macros = "1"
rand              = { version = "0.9", features = ["small_rng"] }
rand_xoshiro      = "0.7"
regex             = "1"

reqwest = { version = "0.12.23", default-features = false, features = [
  "rustls-tls-webpki-roots",
  "json",
] }

reusable-fmt               = "0.2.0"
rustls                     = "0.23.31"
serde                      = { version = "1", features = ["derive"] }
serde_json                 = "1"
serde_yaml                 = "0.9.34"
snap                       = "1"
socket2                    = "0.6.0"
tempfile                   = "3.22"
thiserror                  = "2"
tikv-jemalloc-ctl          = "0.6.0"
tikv-jemallocator.features = ["profiling", "stats", "unprefixed_malloc_on_supported_platforms"]
tikv-jemallocator.version  = "0.6.0"
time                       = { version = "0.3.43", features = ["formatting"] }
tokio                      = { version = "1", features = ["full", "parking_lot", "tracing", "test-util"] }
tokio-stream               = "0.1.17"
tokio-test                 = "0.4"
topk                       = "0.5.0"
topological-sort           = "0.2.2"
tracing                    = "0.1.41"
unwrap-infallible          = "0.1.5"
url                        = "2.5.7"
uuid                       = { version = "1.18.1", features = ["v4"] }

vrl = { git = "https://github.com/mattklein123/vrl.git", branch = "performance-20250625", default-features = false, features = [
  "compiler",
  "value",
  "diagnostic",
  "path",
  "parser",
  "stdlib",
  "core",
] }

xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh64"] }
