[package]
edition      = "2021"
license-file = "../LICENSE"
name         = "pulse-common"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace                = true
async-trait.workspace           = true
bd-log.workspace                = true
bd-panic.workspace              = true
bd-pgv.workspace                = true
bd-time.workspace               = true
console-subscriber.workspace    = true
futures-util.workspace          = true
k8s-openapi.workspace           = true
kube.workspace                  = true
log.workspace                   = true
mockall.workspace               = true
parking_lot.workspace           = true
protobuf-json-mapping.workspace = true
protobuf.workspace              = true
pulse-protobuf.path             = "../pulse-protobuf"
reqwest.workspace               = true
rustls.workspace                = true
serde_json.workspace            = true
serde_yaml.workspace            = true
socket2.workspace               = true
time.workspace                  = true
tokio.workspace                 = true
uuid.workspace                  = true
vrl.workspace                   = true

[dev-dependencies]
assert_matches.workspace    = true
bd-pgv.workspace            = true
ctor.workspace              = true
pretty_assertions.workspace = true
protobuf.workspace          = true
