[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "pulse-protobuf"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
bd-pgv.workspace   = true
bytes.workspace    = true
protobuf.workspace = true

[build-dependencies]
protobuf-codegen.workspace = true
